--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext {
+        kotlinVersion = '1.3.50'
+        appCompatVersion = "1.1.0"
+        navigationVersion = "2.1.0"
+    }
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+
+        //Safe args
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
