--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
 
-
-
+    //PROGRESS BAR
+    implementation 'com.github.antonKozyriatskyi:CircularProgressIndicator:1.3.0'
 
     //MATERIAL DESIGN
     implementation 'com.google.android.material:material:1.0.0'
@@ -50,4 +50,7 @@ dependencies {
     //Butterknife
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+
+    //Graph View
+    implementation 'com.jjoe64:graphview:4.2.2'
 }
