--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,12 @@ dependencies {
 
     //Graph View
     implementation 'com.jjoe64:graphview:4.2.2'
+
+    //ROOM
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+
+    //VIEW MODEL & LIVE DATA
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
