--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         kotlinVersion = '1.3.50'
         appCompatVersion = "1.1.0"
         navigationVersion = "2.1.0"
+        kotlin_version = '1.3.40'
     }
     repositories {
         google()
@@ -15,6 +16,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+        //Kotlin
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         //Safe args
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
