--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,13 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.23.4'
 
     //GSON
-
     implementation 'com.google.code.gson:gson:2.8.2'
 
+    // WORK MANAGER
+    implementation "androidx.work:work-runtime:$rootProject.work_version"
+
+    // Work manager - Test helpers
+    androidTestImplementation "androidx.work:work-testing:$rootProject.work_version"
 
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
@@ -89,4 +93,7 @@ dependencies {
     //ADAPT TO SCREEN SIZE
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+    //Notification
+    implementation "com.android.support:support-compat:28.0.0"
 }
