--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@
 buildscript {
 
     ext {
-        kotlinVersion = '1.3.50'
+        kotlinVersion = '1.3.61'
         appCompatVersion = "1.1.0"
         navigationVersion = "2.1.0"
-        kotlin_version = '1.3.40'
+        work_version = "2.2.0"
     }
     repositories {
         google()
@@ -17,7 +17,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.5.2'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         //Kotlin
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         //Safe args
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
